# sprite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh  fly.toml
.sqlx/: query-0200e022e5566ec09662b068f4331d40dda4fbd491bb52123353922168087b73.json  query-063dcac8c17cca2124e4768f6e315eede1a7e361bc4a19f370e0bf03587312df.json  query-2e506cd3447202bf14dbc2be5486a245ebddbce0619ca838817049d23f113b88.json  query-5292ce87e1f0d9e7a19dcc5ac6f244d01b21279a69e66fd10b9a46c7c7c1618b.json  query-64c882bbd5e97746f89f24561a2450afe654288c454dadafa9128e37c82b3f04.json  query-a73c7a6fff25b74eae7a550cdf9e33d1a2918663e8973640fd3ba38fc8469c74.json  query-b5848c1be2f7868bd7231a70213120e70d74a802dca746ee24f6bec73deefcff.json  query-be2ee6771bee406f358b7a1db6a878e193cfb073a216976a26bb58675a0fb852.json  query-c0a63e3df7333081f6594ceb68f999340170a7212947423dae7464a7832490e1.json  query-d555dc3b49468fbb34f4d1f4c6ed91f4fdb0a1aca212e13f7c7499a133fd1799.json  query-de8f6b72bf8bf1c01ca8960758be07d235687f75069971f7095cceac4072dec3.json  query-f6ea8735921ae001cffd0fc48b9819a300172c3b89208467f98abcc828fd2f72.json
assets/html/: index.html
migrations/: 20230901043701_initial-setup.sql  20231010033744_Add_section_column.sql  20231023011212_updated-setup.sql
src/: load_env.rs  main.rs  templates.rs  timer_store.rs  timer_utils.rs  uid.rs
templates/: index.html
