[package]
name = "sprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.47"
anyhow = { version = "1.0.75", features = ["backtrace"] }
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tower = "0.4.13"
